@@ -300,7 +300,7 @@ if(!isGeneric("liesIn"))
    setGeneric("liesIn", function(object, x) standardGeneric("liesIn"))
 
 if(!isGeneric("liesInSupport")) 
-   setGeneric("liesInSupport", function(object, x, checkFin = FALSE)
+   setGeneric("liesInSupport", function(object, x,...)
                                standardGeneric("liesInSupport"))
 if(!isGeneric("convpow")) 
     setGeneric("convpow", function(D1, ...) standardGeneric("convpow"))
